<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/message_layoutx"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <RelativeLayout
        android:id="@+id/message_from"
        android:layout_width="200dp"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/message_profile_layout"
            android:layout_width="36dp"
            android:layout_height="36dp"

            android:src="@drawable/default_user" />

        <TextView
            android:id="@+id/message_text_layout"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_text_layout"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/message_profile_layout"
            android:padding="0dp"
            android:text="@string/msgText"
            android:textColor="#444444"
            android:textSize="14sp"

            />

        <TextView
            android:id="@+id/name_text_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/message_profile_layout"
            android:text="@string/displayName"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/time_text_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/name_text_layout"
            android:text="@string/timeText"
            android:textSize="12sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/message_to"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp">
        <TextView
            android:id="@+id/time_text_layout_self"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="12dp"
            android:text="@string/textTime2"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/message_text_layout_self"
            android:layout_width="131dp"
            android:layout_height="wrap_content"

            android:layout_below="@+id/time_text_layout_self"
            android:layout_alignEnd="@+id/time_text_layout_self"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="-6dp"
            android:gravity="end"
            android:padding="0dp"
            android:text="@string/txtmsgText2"


            android:textColor="#444444"
            android:textSize="14sp" />

    </RelativeLayout>
</RelativeLayout>