<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorPrimaryDark">


    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/app_icon"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/txt_username"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        android:textColor="@android:color/white"/>


    <EditText
        android:id="@+id/login_password"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_below="@+id/login_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"

        android:layout_marginTop="24dp"

        android:ems="10"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/login_btnLogin"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:layout_below="@+id/login_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"

        android:layout_marginTop="244dp"
        android:text="@string/txt_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        />

    <Button
        android:id="@+id/login_btnRegister"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_below="@+id/login_btnLogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"

        android:layout_marginTop="20dp"
        android:text="@string/txt_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btnLogin"

        android:textColor="@android:color/white"
        android:background="@android:color/holo_red_dark"/>


</android.support.constraint.ConstraintLayout>