<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:id="@+id/message_single_layout"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:padding="10dp"-->
    <!--android:weightSum="10"-->
    <!--&gt;-->


    <!--<de.hdodenhof.circleimageview.CircleImageView-->
        <!--android:id="@+id/message_profile_layout"-->
        <!--android:layout_width="36dp"-->
        <!--android:layout_height="36dp"-->
        <!--android:layout_weight="0"-->
        <!--android:src="@drawable/default_user" />-->

    <!--<TextView-->
        <!--android:id="@+id/message_text_layout"-->
        <!--android:layout_width="131dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/name_text_layout"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_toEndOf="@+id/message_profile_layout"-->
        <!--android:padding="0dp"-->
        <!--android:text="Message Text"-->
        <!--android:textColor="#444444"-->
        <!--android:textSize="14sp"-->

     <!--/>-->

    <!--<TextView-->
        <!--android:id="@+id/name_text_layout"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_toEndOf="@+id/message_profile_layout"-->
        <!--android:text="Display Name"-->
        <!--android:textColor="@android:color/black"-->
        <!--android:textSize="15sp"-->
        <!--android:textStyle="bold" />-->

    <!--<TextView-->
        <!--android:id="@+id/time_text_layout"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_marginTop="2dp"-->
        <!--android:layout_toEndOf="@+id/name_text_layout"-->
        <!--android:text="00:00"-->
        <!--android:textSize="12sp" />-->


    <!--<TextView-->
        <!--android:id="@+id/time_text_layout_self"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_marginLeft="120dp"-->
        <!--android:layout_marginTop="2dp"-->
        <!--android:layout_marginEnd="12dp"-->
        <!--android:text="00:00"-->
        <!--android:textSize="12sp" />-->


    <!--<TextView-->
        <!--android:id="@+id/message_text_layout_self"-->
        <!--android:layout_width="131dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/name_text_layout"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_marginLeft="100dp"-->
        <!--android:layout_marginTop="0dp"-->
        <!--android:layout_marginEnd="10dp"-->
        <!--android:padding="0dp"-->
        <!--android:text="Message Text"-->
        <!--android:textColor="#444444"-->
        <!--android:textSize="14sp"-->
        <!--android:gravity="right"-->



        <!--/>-->

    <!--<ImageView-->
        <!--android:id="@+id/message_image_layout"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_alignStart="@+id/message_text_layout"-->
        <!--android:layout_below="@+id/message_text_layout"-->
        <!--android:layout_marginLeft="0dp"-->
        <!--android:layout_toEndOf="@+id/message_profile_layout"-->
        <!--android:padding="0dp"-->
        <!--android:scaleType="centerCrop" />-->

    <!--<EditText-->
        <!--android:id="@+id/message_self_name"-->
        <!--android:layout_width="75dp"-->
        <!--android:layout_height="23dp"-->
        <!--android:layout_above="@+id/message_text_layout_self"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_marginStart="268dp"-->
        <!--android:layout_marginTop="4dp"-->
        <!--android:layout_marginBottom="3dp"-->
        <!--android:ems="10"-->
        <!--android:inputType="textPersonName"-->
        <!--android:text="Self" />-->


<!--</RelativeLayout>-->

<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/message_layoutx"
    xmlns:android="http://schemas.android.com/apk/res/android"
   >


    <RelativeLayout
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/message_from"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_round_corner">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/message_profile_layout"
            android:layout_width="36dp"
            android:layout_height="36dp"

            android:src="@drawable/default_user" />

        <TextView
            android:id="@+id/message_text_layout"
            android:layout_width="122dp"
            android:layout_height="16dp"
            android:layout_below="@+id/name_text_layout"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="14dp"
            android:layout_toEndOf="@+id/message_profile_layout"
            android:padding="0dp"

            android:text="@string/msgText"
            android:textColor="#444444"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/name_text_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/message_profile_layout"
            android:text="@string/displayName"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/time_text_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/name_text_layout"
            android:text="@string/timeText"
            android:textSize="12sp" />

    </RelativeLayout>

    <RelativeLayout
        android:background="@drawable/layout_round_corner2"
        android:id="@+id/message_to"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        >

        <TextView
            android:id="@+id/time_text_layout_self"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="-2dp"
            android:layout_marginEnd="17dp"
            android:text="@string/textTime2"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/message_text_layout_self"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            android:layout_below="@+id/time_text_layout_self"
            android:layout_alignEnd="@+id/time_text_layout_self"
            android:layout_alignParentStart="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="-3dp"
            android:layout_marginEnd="-3dp"
            android:gravity="end"
            android:padding="0dp"


            android:text="@string/txtmsgText2"
            android:textColor="#444444"
            android:textSize="14sp" />

    </RelativeLayout>


    <ImageView
    android:id="@+id/message_image_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"

    android:layout_marginStart="0dp"
    android:padding="0dp"
    android:scaleType="centerCrop" />
</RelativeLayout>